@@ -1,4 +1,15 @@
 2010-08-14  Ivan Maidanski <ivmai@mail.ru>
+
+	* dyn_load.c (GC_register_dynlib_callback): Adjust "start" pointer
+	for 64-bit targets.
+	* pthread_support.c (start_mark_threads): Expand PTHREAD_CREATE
+	macro.
+	* pthread_support.c (start_mark_threads): Call INIT_REAL_SYMS()
+	since REAL(pthread_create) is used.
+	* pthread_support.c (PTHREAD_CREATE): Remove unused.
+
+2010-08-14  Ivan Maidanski <ivmai@mail.ru>
+
 	* extra/threadlibs.c (main): Remove --wrap for "read" (since not
 	wrapped anymore).
 	* doc/README.linux (GC_USE_LD_WRAP): Ditto.
